--- a/TrakSysWebUiAutomationTests/TSWebUiAutomationTests.csproj
+++ b/TrakSysWebUiAutomationTests/TSWebUiAutomationTests.csproj
@@ -10,6 +10,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="testsettings.config" />
+    <None Remove="testsettings2.config" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="testsettings2.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="testsettings.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
@@ -21,11 +35,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TrakSysWebUiAutomationFramework\TSWebUiAutomationFramework.csproj" />
+    <ProjectReference Include="..\TrakSysWebUiAutomationFramework\TsWebUiAutomationFramework.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\" />
+    <Folder Include="Pages\Config\" />
+    <Folder Include="Pages\Dev\" />
+    <Folder Include="Pages\Admin\" />
+    <Folder Include="Pages\Settings\" />
+    <Folder Include="Pages\Search\" />
   </ItemGroup>
 
 </Project>
