refactor setup method w/ baseurl

--- a/TrakSysWebUiAutomationTests/testsettings.config
+++ b/TrakSysWebUiAutomationTests/testsettings.config
@@ -7,6 +7,6 @@
 		<add key="slowmo" value="250" />
 		<add key="trace" value="true" />
 		<add key="video" value="false" />
-		<add key="baseurl" value="http://win-2u8u3utcd9b/TS/pages/home/"/>
+		<add key="baseurl" value="http://iTrainJVM/TS/"/>
 	</appSettings>
 </configuration>
