--- a/TrakSysWebUiAutomationTests/testsettings.config
+++ b/TrakSysWebUiAutomationTests/testsettings.config
@@ -1,12 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<appSettings>
-		<add key="browser" value="chromium" />	<!--chromium, chrome, edge, firefox, webkit-->
-		<add key="timeout" value="30000" />
+		<add key="browser" value="firefox" />	<!--chromium, chrome, edge, firefox, webkit-->
+		<!--<add key="timeout" value="30000" />-->
 		<add key="headless" value ="false" />
 		<add key="slowmo" value="250" />
 		<add key="trace" value="true" />
-		<add key="video" value="false" />
-		<add key="baseurl" value="http://iTrainJVM/TS/"/>
+		<add key="video" value="true" />
+		<add key="baseurl" value="http://tsqualityvmjvu/TS/"/>
 	</appSettings>
 </configuration>
